# changes

./: README.md  flake.nix  pyproject.toml
nix/: shared.nix
pythoneda/: __init__.py
pythoneda/shared/artifact_changes/: __init__.py  change.py
pythoneda/shared/artifact_changes/shared/: __init__.py  change.py
pythonedaartifactsharedchanges/: change.py
tests/: change_tests.py
